fix: long links should wrap

--- a/assets/main.css
+++ b/assets/main.css
@@ -157,6 +157,8 @@
     overflow-x: auto;
     overflow-y: hidden;
   }
+  a {
+    word-break: break-word;
   }
 
   header > nav > ul > li:first-child {
